--- a/styles/scss/layouts/_hero.scss
+++ b/styles/scss/layouts/_hero.scss
@@ -38,7 +38,7 @@
     }
 
     @include laptop-query{
-        background-image: url('../../../assets/images/illustration-working.svg');
+        background-image: url('../../assets/images/illustration-working.svg');
         background-repeat: no-repeat;
         background-position: 115% 0;
 
